Refactor: Platform, Profile, Roles and Permissions (#27)