@@ -10,7 +10,7 @@ import static org.mockito.Mockito.when;
 import auth.service.BaseTest;
 import auth.service.app.exception.CheckPermissionException;
 import auth.service.app.model.annotation.CheckPermission;
-import auth.service.app.model.entity.AppUserEntity;
+import auth.service.app.model.entity.ProfileEntity;
 import auth.service.app.model.token.AuthToken;
 import auth.service.app.model.token.AuthTokenRole;
 import helper.TestData;
@@ -30,7 +30,7 @@ public class PermissionCheckTest extends BaseTest {
 
   private static Authentication authentication;
   private static AuthToken authToken;
-  private static List<AppUserEntity> appUserEntities;
+  private static List<ProfileEntity> profileEntities;
 
   @Mock private SecurityContext securityContext;
 
@@ -39,21 +39,21 @@ public class PermissionCheckTest extends BaseTest {
   @BeforeAll
   public static void setUpBeforeAll() {
     authToken = TestData.getAuthToken();
-    appUserEntities = TestData.getAppUserEntities();
+    profileEntities = TestData.getProfileEntities();
   }
 
   @BeforeEach
   public void setUpBeforeEach() {
     SecurityContextHolder.setContext(securityContext);
-    authentication =
-        new TestingAuthenticationToken(APP_USER_EMAIL, authToken, Collections.emptyList());
+    authentication = new TestingAuthenticationToken(EMAIL, authToken, Collections.emptyList());
     when(securityContext.getAuthentication()).thenReturn(authentication);
   }
 
   @Test
   void testCheckPermission() {
     CheckPermission checkPermission = mock(CheckPermission.class);
-    when(checkPermission.value()).thenReturn(new String[] {"Permission One", "Permission Two"});
+    when(checkPermission.value())
+        .thenReturn(new String[] {"PERMISSION_READ", "SOME_OTHER_PERMISSION"});
 
     assertDoesNotThrow(() -> permissionCheck.checkPermission(checkPermission));
     verify(securityContext).getAuthentication();
@@ -63,9 +63,8 @@ public class PermissionCheckTest extends BaseTest {
   void testCheckPermission_SuperUser() {
     AuthToken authToken = TestData.getAuthToken();
     authToken.setRoles(
-        List.of(AuthTokenRole.builder().name(ConstantUtils.APP_ROLE_NAME_SUPERUSER).build()));
-    authentication =
-        new TestingAuthenticationToken(APP_USER_EMAIL, authToken, Collections.emptyList());
+        List.of(AuthTokenRole.builder().roleName(ConstantUtils.ROLE_NAME_SUPERUSER).build()));
+    authentication = new TestingAuthenticationToken(EMAIL, authToken, Collections.emptyList());
 
     CheckPermission checkPermission = mock(CheckPermission.class);
     when(checkPermission.value())
@@ -85,72 +84,70 @@ public class PermissionCheckTest extends BaseTest {
             CheckPermissionException.class, () -> permissionCheck.checkPermission(checkPermission));
 
     assertEquals(
-        "Permission Denied: User does not have required permissions...", exception.getMessage());
+        "Permission Denied: Profile does not have required permissions...", exception.getMessage());
   }
 
   @Test
-  void testCanUserAccessAppUser_Email() {
-    assertDoesNotThrow(() -> permissionCheck.canUserAccessAppUser(APP_USER_EMAIL, 0));
+  void testCheckProfileAccess_Email() {
+    assertDoesNotThrow(() -> permissionCheck.checkProfileAccess(EMAIL, 0));
   }
 
   @Test
-  void testCanUserAccessAppUser_Id() {
-    assertDoesNotThrow(() -> permissionCheck.canUserAccessAppUser(null, 1));
+  void testCheckProfileAccess_Id() {
+    assertDoesNotThrow(() -> permissionCheck.checkProfileAccess(null, 1));
   }
 
   @Test
-  void testCanUserAccessAppUser_SuperUser() {
+  void testCheckProfile_SuperUser() {
     AuthToken authToken = TestData.getAuthToken();
     authToken.setRoles(
-        List.of(AuthTokenRole.builder().name(ConstantUtils.APP_ROLE_NAME_SUPERUSER).build()));
-    authentication =
-        new TestingAuthenticationToken(APP_USER_EMAIL, authToken, Collections.emptyList());
+        List.of(AuthTokenRole.builder().roleName(ConstantUtils.ROLE_NAME_SUPERUSER).build()));
+    authentication = new TestingAuthenticationToken(EMAIL, authToken, Collections.emptyList());
     when(securityContext.getAuthentication()).thenReturn(authentication);
 
-    assertDoesNotThrow(() -> permissionCheck.canUserAccessAppUser("some@email.com", 99));
+    assertDoesNotThrow(() -> permissionCheck.checkProfileAccess("some@email.com", 99));
     verify(securityContext).getAuthentication();
   }
 
   @Test
-  void testCanUserAccessAppUser_Failure() {
+  void testCheckProfileAccess_Failure() {
     CheckPermissionException exception =
         assertThrows(
             CheckPermissionException.class,
-            () -> permissionCheck.canUserAccessAppUser("some@email.com", 99));
+            () -> permissionCheck.checkProfileAccess("some@email.com", 99));
 
     assertEquals(
-        "Permission Denied: User does not have required permissions to user entity...",
+        "Permission Denied: Profile does not have required permissions to profile entity...",
         exception.getMessage());
   }
 
   @Test
-  void testFilterAppUserListByAccess() {
-    List<AppUserEntity> appUserEntitiesFiltered =
-        permissionCheck.filterAppUserListByAccess(appUserEntities);
-    assertEquals(1, appUserEntitiesFiltered.size());
-    assertEquals(authToken.getUser().getId(), appUserEntitiesFiltered.getFirst().getId());
+  void testFilterProfileListByAccess() {
+    List<ProfileEntity> profileEntitiesFiltered =
+        permissionCheck.filterProfileListByAccess(profileEntities);
+    assertEquals(1, profileEntitiesFiltered.size());
+    assertEquals(authToken.getProfile().getId(), profileEntitiesFiltered.getFirst().getId());
   }
 
   @Test
-  void testFilterAppUserListByAccess_SuperUser() {
+  void testFilterProfileListByAccess_SuperUser() {
     AuthToken authToken = TestData.getAuthToken();
     authToken.setRoles(
-        List.of(AuthTokenRole.builder().name(ConstantUtils.APP_ROLE_NAME_SUPERUSER).build()));
-    authentication =
-        new TestingAuthenticationToken(APP_USER_EMAIL, authToken, Collections.emptyList());
+        List.of(AuthTokenRole.builder().roleName(ConstantUtils.ROLE_NAME_SUPERUSER).build()));
+    authentication = new TestingAuthenticationToken(EMAIL, authToken, Collections.emptyList());
     when(securityContext.getAuthentication()).thenReturn(authentication);
 
-    List<AppUserEntity> appUserEntitiesFiltered =
-        permissionCheck.filterAppUserListByAccess(appUserEntities);
-    assertEquals(appUserEntities.size(), appUserEntitiesFiltered.size());
+    List<ProfileEntity> profileEntitiesFiltered =
+        permissionCheck.filterProfileListByAccess(profileEntities);
+    assertEquals(profileEntitiesFiltered.size(), profileEntities.size());
   }
 
   @Test
-  void testFilterAppUserListByAccess_Failure() {
+  void testFilterProfileListByAccess_Failure() {
     when(securityContext.getAuthentication()).thenReturn(null);
 
     assertThrows(
         CheckPermissionException.class,
-        () -> permissionCheck.filterAppUserListByAccess(appUserEntities));
+        () -> permissionCheck.filterProfileListByAccess(profileEntities));
   }
 }
